import Event
class Corner(Event):

    def __init__(self, position):
        self.position = position
