class Event:
    
    def __init__(self, success, position):
        self._success = success
        self._position = position
