import Event
class Goal(Event):
    
       def __init__(self):
        super().__init__()
    