class Lineup:

        def __init__(self, lineup, position):
            self._lineup = lineup
            self._position = position
       
        def getPosition(self, int):
            return self._position
       
        def getPlayer(self, position):
            return self._int