class Position:

    def __init__(self, x, y, elapsed, elapsed_plus):
        self._x = x
        self._y = y
        self._elapsed = elapsed
        self._elapsed_plus = elapsed_plus
