class ShotOn:

       def __init__(self):
        super().__init__()
    