class Match:
    
       def __init__(self, home, away, homeLinneup, awayLineup):
           self._home = home
           self._away = away
           self._homeLinneup = homeLinneup
           self._awayLineup = awayLineup